--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -143,4 +143,87 @@
      <dimen name="home_official_head_text_size">16sp</dimen>
      <dimen name="home_officialaccount_name_margin_top">5dp</dimen>
      <dimen name="home_officialaccount_name_text_size">14sp</dimen>
+     <dimen name="home_search_iv_margin_left">10dp</dimen>
+     <dimen name="home_search_et_margin_start">5dp</dimen>
+     <dimen name="home_search_et_margin_left">5dp</dimen>
+     <dimen name="home_search_et_padding_left">10dp</dimen>
+     <dimen name="home_search_et_padding_right">10dp</dimen>
+     <dimen name="home_search_et_text_size">12sp</dimen>
+     <dimen name="home_tv_search_cancel_margin_left">10dp</dimen>
+     <dimen name="home_tv_search_cancel_text_size">16sp</dimen>
+     <dimen name="home_tv_hotsearch_margin_left">16dp</dimen>
+     <dimen name="home_tv_hotsearch_margin_top">10dp</dimen>
+     <dimen name="home_tv_hotsearch_text_size">16sp</dimen>
+     <dimen name="home_searchhot_rv_margin_left">10dp</dimen>
+     <dimen name="home_searchhot_rv_margin_top">10dp</dimen>
+     <dimen name="home_searchhot_rv_margin_right">10dp</dimen>
+     <dimen name="home_searchkeyword_head_rl_margin_left">16dp</dimen>
+     <dimen name="home_searchkeyword_head_rl_margin_right">16dp</dimen>
+     <dimen name="home_tv_search_history_margin_top">10dp</dimen>
+     <dimen name="home_tv_search_history_text_size">16sp</dimen>
+     <dimen name="home_searchkeyword_clearall_tv_text_size">16sp</dimen>
+     <dimen name="home_tv_hotkey_height">40dp</dimen>
+     <dimen name="home_tv_hotkey_text_size">16sp</dimen>
+     <dimen name="home_tv_hotkey_padding_right">10dp</dimen>
+     <dimen name="home_tv_hotkey_padding_left">10dp</dimen>
+     <dimen name="home_tv_hotkey_margin_top">5dp</dimen>
+     <dimen name="home_tv_hotkey_margin_bottom">10dp</dimen>
+     <dimen name="home_tv_hotkey_margin_right">5dp</dimen>
+     <dimen name="home_tv_hotkey_margin_left">5dp</dimen>
+     <dimen name="home_hotkeyframe_radius">6dp</dimen>
+     <dimen name="home_cl_searchkeyword_height">40dp</dimen>
+     <dimen name="home_iv_searchkeyword_time_margin_left">16dp</dimen>
+     <dimen name="home_tv_search_keyword_margin_left">10dp</dimen>
+     <dimen name="home_iv_searchkeyword_delete_margin_right">16dp</dimen>
+     <dimen name="home_iv_searchresult_back_width">28dp</dimen>
+     <dimen name="home_iv_searchresult_back_height">28dp</dimen>
+     <dimen name="home_iv_searchresult_back_margin_left">16dp</dimen>
+     <dimen name="home_et_searchresult_height">36dp</dimen>
+     <dimen name="home_et_searchresult_margin_start">5dp</dimen>
+     <dimen name="home_et_searchresult_margin_left">5dp</dimen>
+     <dimen name="home_et_searchresult_padding_left">10dp</dimen>
+     <dimen name="home_et_searchresult_padding_right">10dp</dimen>
+     <dimen name="home_et_searchresult_text_size">12sp</dimen>
+     <dimen name="home_tv_searchresult_cancel_margin_left">10dp</dimen>
+     <dimen name="home_tv_searchresult_cancel_margin_right">10dp</dimen>
+     <dimen name="home_tv_searchresult_cancel_text_size">16sp</dimen>
+     <dimen name="home_rl_label_head_margin_top">10dp</dimen>
+     <dimen name="home_tv_mylabel_margin_left">16dp</dimen>
+     <dimen name="home_tv_mylabel_text_size">16sp</dimen>
+     <dimen name="home_tv_knwoledge_label_drag_text_size">12sp</dimen>
+     <dimen name="home_tv_label_edit_text_size">16sp</dimen>
+     <dimen name="home_tv_label_edit_margin_right">16dp</dimen>
+     <dimen name="home_knowledget_tag_margin_left">16dp</dimen>
+     <dimen name="home_knowledget_tag_margin_top">10dp</dimen>
+     <dimen name="home_knowledget_tag_margin_right">16dp</dimen>
+     <dimen name="home_rl_moreknowledge_margin_top">20dp</dimen>
+     <dimen name="home_tv_morelabel_margin_left">16dp</dimen>
+     <dimen name="home_tv_morelabel_text_size">16sp</dimen>
+     <dimen name="home_my_knowlwdge_hint_text_size">12sp</dimen>
+     <dimen name="home_moreknowledge_rv_margin_left">10dp</dimen>
+     <dimen name="home_moreknowledge_rv_margin_top">10dp</dimen>
+     <dimen name="home_moreknowledge_rv_margin_right">10dp</dimen>
+     <dimen name="home_iv_addlabel_width">26dp</dimen>
+     <dimen name="home_iv_addlabel_height">26dp</dimen>
+     <dimen name="home_iv_addlabel_margin_left">16dp</dimen>
+     <dimen name="home_iv_addlabel_margin_top">10dp</dimen>
+     <dimen name="home_knowledge_label_margin_right">8dp</dimen>
+     <dimen name="home_rl_knowledge_margin_left">5dp</dimen>
+     <dimen name="home_rl_knowledge_margin_top">10dp</dimen>
+     <dimen name="home_rl_knowledge_margin_right">8dp</dimen>
+     <dimen name="home_rl_knowledge_margin_bottom">10dp</dimen>
+     <dimen name="home_tv_knowledge_height">40dp</dimen>
+     <dimen name="home_tv_knowledge_paddding_left">10dp</dimen>
+     <dimen name="home_tv_knowledge_paddding_right">10dp</dimen>
+     <dimen name="home_tv_knowledge_text_size">16sp</dimen>
+     <dimen name="home_inputlabel_et_margin_top">20dp</dimen>
+     <dimen name="home_inputlabel_et_margin_left">20dp</dimen>
+     <dimen name="home_inputlabel_et_margin_right">20dp</dimen>
+     <dimen name="home_inputlabel_et_text_size">16sp</dimen>
+     <dimen name="home_inputlabel_bottom_view_margin_top">5dp</dimen>
+     <dimen name="home_inputlabel_bottom_view_margin_left">16dp</dimen>
+     <dimen name="home_inputlabel_bottom_view_margin_right">16dp</dimen>
+     <dimen name="home_tv_labelnumber_textsize">14sp</dimen>
+     <dimen name="home_tv_labelnumber_margin_right">16dp</dimen>
+     <dimen name="home_tv_labelnumber_margin_top">10dp</dimen>
 </resources>
