--- a/library_base/src/main/res/values-night/colors.xml
+++ b/library_base/src/main/res/values-night/colors.xml
@@ -3,4 +3,7 @@
     <color name="base_text_item_color">#303030</color>
     <color name="base_tv_articletitle_color">#D3D3D3</color>
     <color name="base_item_bottomview_color">#000000</color>
+    <color name="base_cl_article_item_color">#303030</color>
+    <color name="base_tv_title_color">#D3D3D3</color>
+    <color name="base_item_bottom_view">#000000</color>
 </resources>
