--- a/library_base/src/main/res/values/colors.xml
+++ b/library_base/src/main/res/values/colors.xml
@@ -10,4 +10,11 @@
     <color name="base_item_articledata_color">#999999</color>
     <color name="base_item_bottomview_color">#EFF2F5</color>
     <color name="base_progress_color">#4E4E4E</color>
+    <color name="base_cl_article_item_color">#ffffff</color>
+    <color name="base_item_tv_author_color">#999999</color>
+    <color name="base_tv_title_color">#333333</color>
+    <color name="base_tv_project_desc_color">#999999</color>
+    <color name="base_tv_superchapter_color">#999999</color>
+    <color name="base_item_tv_time_color">#999999</color>
+    <color name="base_item_bottom_view">#EFF2F5</color>
 </resources>
