--- a/library_widget/src/main/res/values-en/string.xml
+++ b/library_widget/src/main/res/values-en/string.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="widget_set_edit_tips">You should set the label first</string>
     <string name="widget_min_gesture_password">At least four points are connected</string>
     <string name="widget_gesture_password_inequality">The two gesture passwords are inconsistent</string>
     <string name="widget_gesture_password_error">Gesture password error</string>
