--- a/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/home_magic_height"
             android:layout_marginRight="@dimen/home_magicindicator_marginright"
+            android:layout_toLeftOf="@+id/home_iv_labelmore"
             android:minHeight="@dimen/home_magic_height" />
 
 
@@ -31,7 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/home_magicindicator_marginright" />
+            android:layout_marginRight="@dimen/home_label_margin_right"
+            android:background="@drawable/home_icon_flagmore"/>
 
 
     </RelativeLayout>
