--- a/module_square/src/main/res/values/dimens.xml
+++ b/module_square/src/main/res/values/dimens.xml
@@ -24,4 +24,55 @@
     <dimen name="square_tv_article_rule_margin_top">20dp</dimen>
     <dimen name="square_tv_article_rule_margin_right">24dp</dimen>
     <dimen name="square_tv_article_rule_text_size">14sp</dimen>
+    <dimen name="square_tv_tipshare_text_size">16sp</dimen>
+    <dimen name="square_tv_goshare_margin_right">16dp</dimen>
+    <dimen name="square_share_article_corner">4dp</dimen>
+    <dimen name="square_tv_goshare_padding_right">2dp</dimen>
+    <dimen name="square_tv_goshare_padding_left">2dp</dimen>
+    <dimen name="square_tv_goshare_padding_top">2dp</dimen>
+    <dimen name="square_tv_goshare_padding_bottom">2dp</dimen>
+    <dimen name="square_tv_goshare_text_size">16sp</dimen>
+    <dimen name="square_tv_addcoins_text_size">16sp</dimen>
+    <dimen name="square_tv_everysearch_margin_left">16dp</dimen>
+    <dimen name="square_tv_everysearch_margin_top">10dp</dimen>
+    <dimen name="square_tv_everysearch_text_size">18sp</dimen>
+    <dimen name="square_searchhot_rv_margin_left">10dp</dimen>
+    <dimen name="square_searchhot_rv_margin_top">10dp</dimen>
+    <dimen name="square_searchhot_rv_margin_right">10dp</dimen>
+    <dimen name="square_tv_new_share_margin_left">16dp</dimen>
+    <dimen name="square_tv_new_share_text_size">18sp</dimen>
+    <dimen name="square_view_bottom_height">8dp</dimen>
+    <dimen name="square_view_bottom_margin_top">16dp</dimen>
+    <dimen name="square_fab_up_margin_right">20dp</dimen>
+    <dimen name="square_fab_up_margin_bottom">70dp</dimen>
+    <dimen name="square_tv_hotkey_text_size">16sp</dimen>
+    <dimen name="square_tv_hotkey_padding_left">10dp</dimen>
+    <dimen name="square_tv_hotkey_padding_right">10dp</dimen>
+    <dimen name="square_tv_hotkey_margin_top">5dp</dimen>
+    <dimen name="square_tv_hotkey_margin_bottom">10dp</dimen>
+    <dimen name="square_tv_hotkey_margin_left">5dp</dimen>
+    <dimen name="square_tv_hotkey_margin_right">5dp</dimen>
+    <dimen name="square_key_frame_radius">6dp</dimen>
+    <dimen name="square_item_articleauthor_margin_start">16dp</dimen>
+    <dimen name="square_item_articleauthor_margin_top">16dp</dimen>
+    <dimen name="square_item_articleauthor_padding_right">8dp</dimen>
+    <dimen name="square_item_articleauthor_text_size">12sp</dimen>
+    <dimen name="square_item_articlenew_margin_right">8dp</dimen>
+    <dimen name="square_item_articlenew_text_size">12sp</dimen>
+    <dimen name="square_item_articlechaptername_padding_left">4dp</dimen>
+    <dimen name="square_item_articlechaptername_padding_top">2dp</dimen>
+    <dimen name="square_item_articlechaptername_padding_right">4dp</dimen>
+    <dimen name="square_item_articlechaptername_padding_bottom">2dp</dimen>
+    <dimen name="square_item_articlechaptername_text_size">12sp</dimen>
+    <dimen name="square_icon_collect_margin_end">16dp</dimen>
+    <dimen name="square_tv_articletitle_margin_start">16dp</dimen>
+    <dimen name="square_item_articledata_margin_start">16dp</dimen>
+    <dimen name="square_item_articledata_margin_top">10dp</dimen>
+    <dimen name="square_item_articledata_text_size">12sp</dimen>
+    <dimen name="square_articles_bottom_view_height">8dp</dimen>
+    <dimen name="square_articles_bottom_view_margin_top">16dp</dimen>
+    <dimen name="square_iv_question_lefticon_margin_left">16dp</dimen>
+    <dimen name="square_question_tv_title_text_size">18sp</dimen>
+    <dimen name="square_iv_question_margin_left">16dp</dimen>
+    <dimen name="square_tv_tipshare_margin_left">16dp</dimen>
 </resources>
