--- a/module_project/src/main/res/layouts/activitys/layout/project_activity.xml
+++ b/module_project/src/main/res/layouts/activitys/layout/project_activity.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/project_ll_article"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.knight.kotlin.module_project.fragment.ProjectFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.knight.kotlin.library_widget.CompatToolBar
+        android:id="@+id/project_toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="这是项目页"/>
+        android:background="@color/project_toolbar_color">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <net.lucode.hackware.magicindicator.MagicIndicator
+            android:id="@+id/project_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/project_indicator_height"
+            android:theme="@style/base_AppTheme.AppBarOverlay"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/base_AppTheme.PopupOverlay"/>
+
+    </com.knight.kotlin.library_widget.CompatToolBar>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/project_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
