完成项目功能

--- a/module_mine/src/main/res/values-night/colors.xml
+++ b/module_mine/src/main/res/values-night/colors.xml
@@ -24,4 +24,5 @@
     <color name="mine_tv_confirmpassword_color">#D3D3D3</color>
     <color name="mine_cl_register_confirmpassword_color">#D3D3D3</color>
     <color name="mine_cl_register_confirmpassword_hint_color">#666666</color>
+    <color name="mine_otherarticle_rv_text_color">#D3D3D3</color>
 </resources>
