--- a/module_mine/src/main/res/values/dimens.xml
+++ b/module_mine/src/main/res/values/dimens.xml
@@ -103,4 +103,28 @@
     <dimen name="mine_cl_register_confirmpassword_text_size">16sp</dimen>
     <dimen name="mine_confim_password_bottom_line">12dp</dimen>
     <dimen name="mine_register_confim_text_size">16sp</dimen>
+    <dimen name="mine_coin_rank_rl_margin_left">20dp</dimen>
+    <dimen name="mine_iv_rank_height">28dp</dimen>
+    <dimen name="mine_iv_rank_width">28dp</dimen>
+    <dimen name="mine_tv_rank_margin_start">30dp</dimen>
+    <dimen name="mine_tv_rank_text_size">16sp</dimen>
+    <dimen name="mine_tv_rankusername_margin_start">30dp</dimen>
+    <dimen name="mine_tv_rankusername_text_size">16sp</dimen>
+    <dimen name="mine_tv_rankcoincount_margin_right">20dp</dimen>
+    <dimen name="mine_tv_rankcoincount_text_size">16sp</dimen>
+    <dimen name="mine_rl_otheruser_width">65dp</dimen>
+    <dimen name="mine_rl_otheruser_height">65dp</dimen>
+    <dimen name="mine_rl_otheruser_margin_top">60dp</dimen>
+    <dimen name="mine_other_iv_head_width">65dp</dimen>
+    <dimen name="mine_other_iv_head_height">65dp</dimen>
+    <dimen name="mine_other_tv_userabbr_text_size">16sp</dimen>
+    <dimen name="mine_other_share_tv_username_margin_top">20dp</dimen>
+    <dimen name="mine_other_share_tv_username_text_size">16sp</dimen>
+    <dimen name="mine_other_ll_rank_margin_top">10dp</dimen>
+    <dimen name="mine_other_coincount_text_size">14sp</dimen>
+    <dimen name="mine_other_tv_level_text_size">14sp</dimen>
+    <dimen name="mine_other_tv_rank_text_size">14sp</dimen>
+    <dimen name="mine_otherarticle_tv_text_size">16sp</dimen>
+    <dimen name="mine_otherarticle_tv_padding_left">16dp</dimen>
+    <dimen name="mine_iv_otherrefresh_margin_right">16dp</dimen>
 </resources>
