--- a/module_navigate/src/main/res/values/colors.xml
+++ b/module_navigate/src/main/res/values/colors.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+   <color name="navigate_home_toolbar_color">#ffffff</color>
+   <color name="navigate_bg_color">#ffffff</color>
+   <color name="navigate_right_sidebar_bg">#ffffff</color>
+   <color name="navigate_tree_tight_rv_color">#ffffff</color>
+   <color name="navigate_right_title_item_bg">#f3f3f3</color>
+   <color name="navigate_right_tv_title_color">#333333</color>
+   <color name="navigate_linear_layout_bg">#ffffff</color>
+   <color name="navigate_tv_sort_color">#333333</color>
+   <color name="navigate_hierachy_bg_color">#ffffff</color>
+   <color name="navigate_hierachy_right_sidebar_color">#ffffff</color>
+   <color name="navigate_hierachy_indicator_color">#ffffff</color>
+   <color name="navigate_hierachy_detail_color">#ffffff</color>
 </resources>
