--- a/module_mine/src/main/res/values/colors.xml
+++ b/module_mine/src/main/res/values/colors.xml
@@ -26,4 +26,9 @@
     <color name="mine_cl_register_confirmpassword_hint_color">#999999</color>
     <color name="mine_tv_bottom_coin_rank_color">#dddddd</color>
     <color name="mine_otherarticle_rv_text_color">#333333</color>
+    <color name="mine_tv_detailpointtitle_text_color">#333333</color>
+    <color name="mine_tv_timereason_text_color">#999999</color>
+    <color name="mine_detailpoiint_line_color">#dddddd</color>
+    <color name="mine_tv_title_point_rule_text_color">#333333</color>
+    <color name="mine_tv_rule_detail_point_text_color">#333333</color>
 </resources>
