--- a/module_square/src/main/res/values-night/colors.xml
+++ b/module_square/src/main/res/values-night/colors.xml
@@ -6,7 +6,10 @@
     <color name="square_tv_addcoins_text_color">#D3D3D3</color>
     <color name="square_tv_everysearch_color">#D3D3D3</color>
     <color name="square_tv_new_share_text_color">#D3D3D3</color>
-    <color name="square_cl_articles_bg_color">#ffffff</color>
+    <color name="square_cl_articles_bg_color">#303030</color>
     <color name="square_question_activity_bg">#303030</color>
     <color name="square_question_tv_title_text_color">#D3D3D3</color>
+    <color name="square_tv_articletitle_color">#D3D3D3</color>
+    <color name="square_sharearticle_et_color">#D3D3D3</color>
+    <color name="square_tv_article_link_color">#D3D3D3</color>
 </resources>
