1.图标更换 2.完善护眼模式

--- a/module_set/src/main/res/layouts/activitys/layout/set_activity.xml
+++ b/module_set/src/main/res/layouts/activitys/layout/set_activity.xml
@@ -131,6 +131,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/set_rl_eyecare"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/set_rl_eyecare_margin_left"
